fix: fixed popup overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,9 @@
     background: rgba(32, 1, 34, 0.5) !important;
     border-width: 0 !important;
     color: white !important;
+    :global(.content){
+        width: 25rem;
+    }
 }
 
 :global(.skill-popup::before) {
